--- a/src/Components/Exercise.css
+++ b/src/Components/Exercise.css
@@ -1,3 +1,31 @@
-h2 {
-    margin-top: 25px
+.exercise {
+    margin-top: 25px;
+    display: flex;
+}
+
+.exercise-no {
+    width: 54px;
+    padding-top: 26px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.exercise-body {
+    margin-left: 12px;
+    display: flex;
+    max-width: calc(100% - 54px);
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+iframe {
+    width: 360px;
+    max-width: 100%;
+    height: 180px;
+}
+
+.exercise-body img {
+    height: 130px;
+    min-height: fit-content;
+    max-width: 100%;
 }
